# CScript

./: .gitignore  index.html  package-lock.json  package.json  tsconfig.json
src/: main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/Sketch/: Sketch.ino
src-tauri/src/: main.rs
src/blocks/: customBlocks.ts
src/generators/: arduino.js
src/generators/arduino/: control.js  procedures.js  variables.js
src/res/themes/: themes.js
src/settings_menu/: settings_menu.html  settings_menu.js
styles/: index.css
