[package]
name = "CScript"
version = "0.0.1"
description = "An app build to program the tankbot"
authors = ["Michalis Chatzittofi"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
tauri = { git = "https://github.com/tauri-apps/tauri", features = ["dialog-all", "fs-all", "path-all", "shell-all", "system-tray", "window-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
